Basic + Sprite choice done

--- a/index.html
+++ b/index.html
@@ -2,12 +2,77 @@
 <html>
 <head>
     <meta charset="UTF-8">
+
     <title>Effective JavaScript: Frogger</title>
+
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
 <body>
+	<div id="character" class="modal fade">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+					<h4 class="modal-title">Choose Player</h4>
+				</div>
+				<div class="modal-body">
+					<label class="radio-inline">
+						<input type="radio" id="char-boy" name="character" checked="checked"/>
+						<img src="images/char-boy.png">
+					</label>
+					<label class="radio-inline">
+						<input type="radio" id="char-cat-girl" name="character"/>
+						<img src="images/char-cat-girl.png">
+					</label>
+					<label class="radio-inline">
+						<input type="radio" id="char-horn-girl" name="character"/>
+						<img src="images/char-horn-girl.png">
+					</label>
+					<label class="radio-inline">
+						<input type="radio" id="char-pink-girl" name="character"/>
+						<img src="images/char-pink-girl.png">
+					</label>
+					<label class="radio-inline">
+						<input type="radio" id="char-princess-girl" name="character"/>
+						<img src="images/char-princess-girl.png">
+					</label>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div id="rules" class="modal fade">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+					<h4 class="modal-title">Rules</h4>
+				</div>
+				<div class="modal-body rules">
+					<ul>
+						<li>The player can be moved only by using the 4 arrow keys (Up, Right, Down, Left).</li>
+						<li>The task is to guide the player into water by avoiding contact with the insects.</li>
+						<li>Every successful completion of the task is recorded and the number of successes is displayed at the top right corner.</li>
+						<li>Successfully completing the task 5 times earns an Orange gem.</li>
+						<li>Earning 5 Orange gems gives a Green gem.</li>
+						<li>Earning 5 Green gems gives a Blue gem.</li>
+						<li>Earning 10 Blue gems gives a Golden Star.</li>
+						<li>The games ends once a Golden Star is obtained.</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="bitten" style="display:none">Bitten!</div>
+
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
+    <script src="js/options.js"></script>
 </body>
 </html>
