Count not seen on canvas

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 						<li>The player can be moved only by using the 4 arrow keys (Up, Right, Down, Left).</li>
 						<li>The task is to guide the player into water by avoiding contact with the insects.</li>
 						<li>Every successful completion of the task is recorded and the number of successes is displayed at the top right corner.</li>
+						<li>Every insect bite reduces task count by 1.</li>
 						<li>Successfully completing the task 5 times earns an Orange gem.</li>
 						<li>Earning 5 Orange gems gives a Green gem.</li>
 						<li>Earning 5 Green gems gives a Blue gem.</li>
