Ready for submission

--- a/index.html
+++ b/index.html
@@ -59,11 +59,24 @@
 						<li>Every successful completion of the task is recorded and the number of successes is displayed at the top right corner.</li>
 						<li>Every insect bite reduces task count by 1.</li>
 						<li>Successfully completing the task 5 times earns an Orange gem.</li>
-						<li>Earning 5 Orange gems gives a Green gem.</li>
-						<li>Earning 5 Green gems gives a Blue gem.</li>
-						<li>Earning 10 Blue gems gives a Golden Star.</li>
+						<li>Earning 3 Orange gems gives a Golden Star.</li>
 						<li>The games ends once a Golden Star is obtained.</li>
 					</ul>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div id="congratulations" class="modal fade">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+					<h4 class="modal-title">CONGRATULATIONS!!!</h4>
+				</div>
+				<div class="modal-body">
+					<p>You have successfully finished the game. We hereby declare you as the 'Greatest Arcade Game Champion' in history!</p>
+					<p>The game will now be reset so you can continue having fun. :)</p>
 				</div>
 			</div>
 		</div>
